Adding ruler traits

--- a/mod/Domestication/localisation/domestication_l_english.yml
+++ b/mod/Domestication/localisation/domestication_l_english.yml
@@ -110,19 +110,29 @@
  # Floret Leader traits
  leader_trait_beeple_gov:0 "Floret - Syncretic"
  leader_trait_beeple_gov_desc:0 "This leader has a floret from their syncretic species. While this species no longer plays active roles in reproduction or agriculture, knowledge of its former roles can yield surprising insights in both fields. It is also unreasonably adorable."
+ leader_trait_beeple_rul:0 "$leader_trait_beeple_gov$"
+ leader_trait_beeple_rul_desc:0 "$leader_trait_beeple_gov_desc$"
  leader_trait_cutie_gov:0 "Floret - Cutie"
  leader_trait_cutie_gov_desc:0 "While all florets are cute, this floret is just exceptionally cute. The people of this governors sector are uplifted every time it appears in an announcement broadcast."
- leader_trait_cutie_sci:0 "Floret - Cutie"
+ leader_trait_cutie_sci:0 "$leader_trait_cutie_gov$"
  leader_trait_cutie_sci_desc:0 "While all florets are cute, this floret is just exceptionally cute. Its presence in the research lab encourages everyone to do their best to make our civilization a better place."
- leader_trait_cutie_adm:0 "Floret - Cutie"
+ leader_trait_cutie_adm:0 "$leader_trait_cutie_gov$"
  leader_trait_cutie_adm_desc:0 "While all florets are cute, this floret is just exceptionally cute. The fleet's crew have adopted it as their mascot, and invoke its name as they charge into battle."
- leader_trait_cutie_gen:0 "Floret - Cutie"
+ leader_trait_cutie_gen:0 "$leader_trait_cutie_gov$"
  leader_trait_cutie_gen_desc:0 "While all florets are cute, this floret is just exceptionally cute. Inspired by its cuteness, soldiers do all they can to disable hostile aliens and prevent casualties on all sides so as not to make the floret sad."
+ leader_trait_cutie_rul:0 "$leader_trait_cutie_gov$"
+ leader_trait_cutie_rul_desc:0 "While all florets are cute, this floret is just exceptionally cute. Its cuteness truly lifts up our people and reminds us of our purpose. \"Floret cute!\""
  leader_trait_warp_eng_adm:0 "Floret - Hyperdrive Engineer"
  leader_trait_warp_eng_adm_desc:0 "This floret is a former hyperdrive engineer, and while it isn't actually allowed to work in the hyperdrive core, but it would be mean to ignore it §Yevery§ time it demands that we engage the hyperdrive mid-battle."
+ leader_trait_warp_eng_rul:0 "$leader_trait_warp_eng_adm$"
+ leader_trait_warp_eng_rul_desc:0 "This floret is a former hyperdrive engineer, and while it now resides far from the front lines, those who know it still make an effort to speed up their hyperdrive cycles just to make it happy."
  leader_trait_pirate_adm:0 "Floret - Pirate"
  leader_trait_pirate_adm_desc:0 "This floret is a former pirate, and - unlike most florets - its owner keeps it in peak fighting condition. It often accompanies its owner on the bridge and helpfully points out where other pirates might be lurking."
+ leader_trait_pirate_rul:0 "$leader_trait_pirate_adm$"
+ leader_trait_pirate_rul_desc:0 "This floret is a former pirate, and - unlike most florets - its owner keeps it in peak fighting condition. When schedules allow, it insists on visiting our starports and showing the crew new tricks for sniffing out contraband."
  leader_trait_admiral_adm:0 "Floret - Admiral"
+ leader_trait_admiral_adm_desc:0 "This floret is a former admiral that was captured in battle. It gets very flustered when its owner demonstrates how to evade railgun volleys like the one that disabled the floret's flagship."
+ leader_trait_admiral_adm:0 "$leader_trait_admiral_adm$"
  leader_trait_admiral_adm_desc:0 "This floret is a former admiral that was captured in battle. It gets very flustered when its owner demonstrates how to evade railgun volleys like the one that disabled the floret's flagship."
 
  # Ascension perks
