--- a/mod/Domestication/localisation/english/empire_names_domestication_l_english.yml
+++ b/mod/Domestication/localisation/english/empire_names_domestication_l_english.yml
@@ -1,4 +1,4 @@
-﻿l_default:
+﻿l_english:
   format.domestic.1: "[This.GetSpeciesName] <domesticators>"
   format.domesticated.1: "[This.GetSpeciesName] <domesticated1>"
   format.domesticated.2: "<domesticated2> of [This.Capital.GetName]"
