--- a/mod/Domestication/localisation/english/prescripted_countries_domestication_l_english.yml
+++ b/mod/Domestication/localisation/english/prescripted_countries_domestication_l_english.yml
@@ -1,4 +1,4 @@
-﻿l_default:
+﻿l_english:
  PRESCRIPTED_ship_prefix_humans3: "TCNS"
  PRESCRIPTED_species_name_humans3: "Terran"
  PRESCRIPTED_species_plural_humans3: "Terrans"
