Re-implementing Domesticated Protectorates

--- a/mod/Domestication/localisation/english/domestication_l_english.yml
+++ b/mod/Domestication/localisation/english/domestication_l_english.yml
@@ -18,6 +18,7 @@
  mod_job_floret_per_pop:0 "§G+1§! $job_floret$ Job per $VALUE$ Planet Pops"
  mod_job_floret_per_pop_short:0 "\n§G+1§! £mod_job_floret_add£ per $VALUE$ £pop"
  protectorate_floret_jobs:0 "Floret Jobs"
+ planet_florets:0 "Planet $job_floret_plural$"
 
  # Pop traits
  trait_haustoric_implant:0 "Haustoric Implant"
@@ -106,7 +107,7 @@
  02_DEMAND_DOMEST_SELECT:0 "I don't even know what to say to that..."
  03_DEMAND_DOMEST_SELECT:0 "You... you want to keep [Root.GetSpeciesNamePlural] as... livestock?"
  04_DEMAND_DOMEST_SELECT:0 "Have you lost your mind, [From.GetSpeciesNameInsult]?"
- 01_DEMAND_DOMEST_ACCEPT:0 "We accept your terms and trust that we'll be safe in your [From.GetSpeciesHandNamePlural]. Could we, uh, start the domestication process immediately...?"
+ 01_DEMAND_DOMEST_ACCEPT:0 "We accept your terms and trust that we'll be safe in your [From.GetSpeciesHandNamePlural]. So, uh, does that make you my owner now...?"
  02_DEMAND_DOMEST_ACCEPT:0 "We have little choice but to accept your... \"domestication.\" Um, why are you looking at me like that?"
  01_DEMAND_DOMEST_REFUSE:0 "We cannot accept your proposal in good conscience. Make of what what you will."
  02_DEMAND_DOMEST_REFUSE:0 "We would never surrender our freedom to the likes of you!"
@@ -187,3 +188,32 @@
  d_hive_domestication_lab_desc:0 "This facility functions as the primary physical interface between the Hive Mind and its Owner. In addition to the Owner, a team of dedicated xeno-biologists, veterinarians, and floret caretakers live and work on-site to ensure that the mega-floret's needs are met."
  d_machine_domestication_lab:0 "AI Domestication Facility"
  d_machine_domestication_lab_desc:0 "This facility functions as the primary physical interface between the Hive Mind and its Owner. In addition to the Owner, a team of dedicated xeno-biologists, veterinarians, and floret caretakers live and work on-site to ensure that the mega-floret's needs are met."
+
+ HUM_neck:0 "neck"
+ HUM_neck_plural:0 "necks"
+ MAM_neck:0 "neck"
+ MAM_neck_plural:0 "necks"
+ REP_neck:0 "neck"
+ REP_neck_plural:0 "necks"
+ AVI_neck:0 "neck"
+ AVI_neck_plural:0 "necks"
+ ART_neck:0 "foramen"
+ ART_neck_plural:0 "foramens"
+ MOL_neck:0 "siphons"
+ MOL_neck_plural:0 "siphons"
+ FUN_neck:0 "stipe"
+ FUN_neck_plural:0 "stipes"
+ PLANT_neck:0 "stalk"
+ PLANT_neck_plural:0 "stalks"
+ ROBOT_neck:0 "link"
+ ROBOT_neck_plural:0 "links"
+ MACHINE_neck:0 "link"
+ MACHINE_neck_plural:0 "links"
+ LITHOID_neck:0 "slab"
+ LITHOID_neck_plural:0 "slabs"
+ NECROID_neck:0 "neck"
+ NECROID_neck_plural:0 "necks"
+ AQUATIC_neck:0 "isthumus"
+ AQUATIC_neck_plural:0 "isthumi"
+ neck_fallback:0 "neck"
+ neck_fallback_plural:0 "necks"
