--- a/mod/Domestication/localisation/english/domestication_l_english.yml
+++ b/mod/Domestication/localisation/english/domestication_l_english.yml
@@ -9,7 +9,7 @@
  floretleader:0 "Floret"
  FLORETLEADERS:0 "Florets"
 
- # Floret jobs and related modifers
+ # Jobs and related modifers
  job_floret:0 "Floret"
  job_floret_plural:0 "Florets"
  job_floret_desc:0 "These domesticated sophonts live their lives in xenodrug-induced bliss, providing comfort and amusement to their owners."
@@ -19,20 +19,37 @@
  mod_job_floret_per_pop_short:0 "\n§G+1§! £mod_job_floret_add£ per $VALUE$ £pop"
  protectorate_floret_jobs:0 "Floret Jobs"
  planet_florets:0 "Planet $job_floret_plural$"
+ job_domesticator_sentinel:0 "Sentinel Domesticator"
+ job_domesticator_sentinel_plural:0 "Sentinel Domesticators"
+ job_domesticator_sentinel_desc:0 "These mega-floret domestication specialists care for the enormous Sentinels that formerly guarded the Hollowed Ground."
+ mod_job_domesticator_sentinel_add:0 "$job_domesticator_sentinel$ Jobs"
+ job_domesticator_nanite:0 "Nanite Domesticator"
+ job_domesticator_nanite_plural:0 "Nanite Domesticators"
+ job_domesticator_nanite_desc:0 "These domestication specialists care for the nanites swarms that inhabit this world."
+ mod_job_domesticator_nanite_add:0 "$job_domesticator_nanite$ Jobs"
+ job_domesticator_nemma:0 "Nemma Domesticator"
+ job_domesticator_nemma_plural:0 "Nemma Domesticators"
+ job_domesticator_nemma_desc:0 "These mega-floret domestication specialists care for the enormous nemmas that wander the planet's oceans, carrying our colonies on their backs."
+ mod_job_domesticator_nemma_add:0 "$job_domesticator_nemma$ Jobs"
 
  # Pop traits
  trait_haustoric_implant:0 "Haustoric Implant"
  trait_haustoric_implant_desc:0 "Subdermal implants, grown from their owners' genentic material, have integrated with these florets' endocrine, nervous and muscular systems. Their xenodrug regimens can be controlled with remarkable precision."
- TRAIT_HAUSTORIC_IMPLANT_EFFECT:0 "£amenities£ Amenities from £job£ Jobs: §G+20%§!\n£unity£ Unity from £job£ Jobs: §G+5%§!\nEmpire Sprawl from Pops: §G-5%§!\nAvailable species rights are restricted"
+ TRAIT_HAUSTORIC_IMPLANT_EFFECT:0 "£amenities£ Amenities from £job£ Jobs: §G+20%§!\n£unity£ Unity from £job£ Jobs: §G+5%§!\nEmpire Sprawl from Pops: §G-40%§!\nAvailable species rights are restricted"
  TRAIT_HAUSTORIC_IMPLANT_LONELY_TOOLTIP:0 "Pop Happiness when away from owners: §R-60%§!\nPop Resource Production when away from owners: §R-60%§!"
+ trait_haustoric_hive_node:0 "Haustoric Hive Node"
+ trait_haustoric_hive_node_desc:0 "These drones' hive synapses have been integrated with a haustoric implant, enabling them to live apart from the primary hive (with proper supervision)."
+ trait_haustoric_terminal_node:0 "Haustoric Terminal Module"
+ trait_haustoric_terminal_node_desc:0 "These machine units' syncronization modules have been augmented allow maximum cuddle appreciation even at great separation from a primary node."
  trait_robot_haustoric_module:0 "Haustoric Module"
  trait_robot_haustoric_module_desc:0 "Purpose-built hardware and personalized software interface directly with these florets' emotional emulators and tacile processors, allowing them to experience their owners' love in every circuit."
- TRAIT_HAUSTORIC_MODULE_EFFECT:0 "£amenities£ Amenities from £job£ Jobs: §G+20%§!\n£unity£ Unity from £job£ Jobs: §G+5%§!\nEmpire Sprawl from Pops: §G-5%§!\nAffected by £happiness£ §YHappiness§!"
+ TRAIT_HAUSTORIC_MODULE_EFFECT:0 "£amenities£ Amenities from £job£ Jobs: §G+20%§!\n£unity£ Unity from £job£ Jobs: §G+5%§!\nEmpire Sprawl from Pops: §G-40%§!\nAffected by £happiness£ §YHappiness§!"
  TRAIT_HAUSTORIC_MODULE_LONELY_TOOLTIP:0 "Pop Happiness when away from owners: §R-60%§!\nPop Resource Production when away from owners: §R-60%§!"
 
  # Factions
  pft_domesticator_faction:0 "Domesticator Faction"
  pft_domesticator_faction_desc:1 "Domesticator Factions desire for a multi-species society with a wide variety of sophonts to domesticate. They dislike species-wide Slavery and Purges.\n\n§LXenophile Ethos§!"
+ factions.1.desc.domesticator_faction:0 "Their members have been pushing hard for §Yextremely§! friendly relations with alien species.\n\n"
 
  # Faction demands
  DOMESTICATOR_OVERLORD:0 "Domestication Astropolitics"
@@ -40,9 +57,14 @@
  DOMESTICATOR_OVERLORD_DESC:0 "Installing protectorates to watch over one or more sophont species will please the [Root.GetName]."
 
  # Civics
- civic_domesticators:0 "Domesticators"
- civic_domesticators_desc:0 "This society has a tradition of taking the violent and vulnerable from other species and keeping them as cherished pets."
- civic_tooltip_domesticators_effects:0 "Allows pops with $citizenship_limited$ and $living_standard_chemical_bliss$ to 'work' as $job_floret_plural$."
+ origin_domesticators:0 "Domesticators"
+ #origin_domesticators_desc:0 "This society has a tradition of taking the violent and vulnerable from other species and keeping them as cherished pets."
+ origin_domesticators_desc:0 "This society has structured itself around the "domestication," both civilizationally and individually, of various adorable sophonts throughout the galaxy, regardless of what said sophonts might think of it themselves."
+ origin_tooltip_domesticators_effects:0 "- Start the game with §Y12§! £pop£ Pops being of another species\n- Allows pops with $citizenship_limited$ and $living_standard_chemical_bliss$ to 'work' as $job_floret_plural$"
+ civic_cosmic_harmony:0 "Cosmic Harmony"
+ civic_cosmic_harmony_desc:0 "This society believes in the beauty of existence, from the grand wonders of the universe to the lowliest creatures that live within it."
+ origin_domesticators_secondary_species:0 "Domesticated Species"
+ civic_tooltip_cosmic_harmony_effects:0 "Allows §Y$living_standard_shared_burden$§! Living Standard, under which all £pop£ Pops have moderate £consumer_goods£ §Y$consumer_goods$§! Upkeep regardless of §YStrata§!\nDisables the use of most other §YLiving Standards§!\n£opinion£ Opinion bonus with other empires: §G+10§!\n"
 
  # Name list
  name_list_PLANT5:0 "Plantoid (Affini)"
@@ -101,19 +123,6 @@
  SUBJECT_domesticated_hivemind:0 "Domesticated Hive Mind"
  SUBJECT_domesticated_machine_intelligence:0 "Domesticated Machine Intelligence"
 
- # Diplomacy messages
- 01_DEMAND_DOMEST_PROPOSE:0 "The §Y[From.GetName]§! hereby demands your immediate surrender and compliance with the [Root.GetSpeciesAdj] Domestication Program. Please do not fight us, we would hate to see harm come to any sophont."
- 01_DEMAND_DOMEST_SELECT:0 "Let me see if I understand this correctly... you want to domesticate the [Root.GetName]?"
- 02_DEMAND_DOMEST_SELECT:0 "I don't even know what to say to that..."
- 03_DEMAND_DOMEST_SELECT:0 "You... you want to keep [Root.GetSpeciesNamePlural] as... livestock?"
- 04_DEMAND_DOMEST_SELECT:0 "Have you lost your mind, [From.GetSpeciesNameInsult]?"
- 01_DEMAND_DOMEST_ACCEPT:0 "We accept your terms and trust that we'll be safe in your [From.GetSpeciesHandNamePlural]. So, uh, does that make you my owner now...?"
- 02_DEMAND_DOMEST_ACCEPT:0 "We have little choice but to accept your... \"domestication.\" Um, why are you looking at me like that?"
- 01_DEMAND_DOMEST_REFUSE:0 "We cannot accept your proposal in good conscience. Make of what what you will."
- 02_DEMAND_DOMEST_REFUSE:0 "We would never surrender our freedom to the likes of you!"
- 03_DEMAND_DOMEST_REFUSE:0 "Free [Root.GetSpeciesNamePlural] will never be slaves to [From.GetSpeciesNamePluralInsult]!"
- 04_DEMAND_DOMEST_REFUSE:0 "We would sooner reduce [Root.Capital.GetName] to ashes than accept your shackles!"
-
  # Floret Leader traits
  leader_trait_beeple_gov:0 "Floret - Syncretic"
  leader_trait_beeple_gov_desc:0 "This leader has a floret from their syncretic species. While this species no longer plays active roles in reproduction or agriculture, knowledge of its former roles can yield surprising insights in both fields. It is also unreasonably adorable."
@@ -128,9 +137,9 @@
  leader_trait_cutie_gen:0 "$leader_trait_cutie_gov$"
  leader_trait_cutie_gen_desc:0 "While all florets are cute, this floret is just exceptionally cute. Inspired by its cuteness, soldiers do all they can to disable hostile aliens and prevent casualties on all sides so as not to make the floret sad."
  leader_trait_cutie_rul:0 "$leader_trait_cutie_gov$"
- leader_trait_cutie_rul_desc:0 "While all florets are cute, this floret is just exceptionally cute. Its cuteness truly lifts up our people and reminds us of our purpose. \"Floret cute!\""
+ leader_trait_cutie_rul_desc:0 "While all florets are cute, this floret is just exceptionally cute. Its cuteness truly lifts up our people and reminds us of our purpose.\n\n§L\"Floret cute!\"§!"
  leader_trait_warp_eng_adm:0 "Floret - Hyperdrive Engineer"
- leader_trait_warp_eng_adm_desc:0 "This floret is a former hyperdrive engineer, and while it isn't actually allowed to work in the hyperdrive core, but it would be mean to ignore it §Yevery§ time it demands that we engage the hyperdrive mid-battle."
+ leader_trait_warp_eng_adm_desc:0 "This floret is a former hyperdrive engineer, and while it isn't actually allowed to work in the hyperdrive core, but it would be mean to ignore it §Yevery§! time it demands that we engage the hyperdrive mid-battle."
  leader_trait_warp_eng_rul:0 "$leader_trait_warp_eng_adm$"
  leader_trait_warp_eng_rul_desc:0 "This floret is a former hyperdrive engineer, and while it now resides far from the front lines, those who know it still make an effort to speed up their hyperdrive cycles just to make it happy."
  leader_trait_pirate_adm:0 "Floret - Pirate"
@@ -169,6 +178,34 @@
  leader_trait_marauder_adm_desc:0 "This floret is a former marauder commander. Though it holds no official rank in our navy, its skill in battle is matched only by its cuteness in snuggling."
  leader_trait_marauder_rul:0 "$leader_trait_marauder_adm$"
  leader_trait_marauder_rul_desc:0 "$leader_trait_marauder_adm_desc$"
+ leader_trait_dathnak_sci:0 "Floret - Dathnak"
+ leader_trait_dathnak_sci_desc:0 "This floret is a Dathnak from Baldarak. While gaseous florets do require more specialized care than solid ones, knowledge of their physiology provides countless insights in the field of xeno-veterinary medicine."
+ leader_trait_dathnak_gov:0 "Floret - Dathnak"
+ leader_trait_dathnak_gov_desc:0 "This floret is a Dathnak from Baldarak. While gaseous florets do require more specialized care than solid ones, knowledge of their physiology provides countless insights in the fields of xeno-veterinary medicine and Exotic Gas extraction."
+ leader_trait_dathnak_rul:0 "$leader_trait_dathnak_sci$"
+ leader_trait_dathnak_rul_desc:0 "$leader_trait_dathnak_sci_desc$"
+ leader_trait_warform_adm:0 "Floret - Warform"
+ leader_trait_warform_adm_desc:0 "This floret is a Warform AI that was rescued from an ancient warship. It is often found idling peacefully in its chassis after a long day of playing with military-grade simulation AIs."
+ leader_trait_warform_rul:0 "$leader_trait_warform_adm$"
+ leader_trait_warform_rul_desc:0 "$leader_trait_warform_adm_desc$"
+ leader_trait_brainslug_adm:0 "Floret - Brainslug"
+ leader_trait_brainslug_adm_desc:0 "These florets are a bonded pair of brainslug and host. Unlike other florets, they will never have to be lonely, even when their owner is away. Fewer unexpected absenses from work leaves more time for planned cuddle sessions with their owner."
+ leader_trait_brainslug_gen:0 "$leader_trait_brainslug_adm$"
+ leader_trait_brainslug_gen_desc:0 "$leader_trait_brainslug_adm_desc$"
+ leader_trait_brainslug_sci:0 "$leader_trait_brainslug_adm$"
+ leader_trait_brainslug_sci_desc:0 "$leader_trait_brainslug_adm_desc$"
+ leader_trait_brainslug_gov:0 "$leader_trait_brainslug_adm$"
+ leader_trait_brainslug_gov_desc:0 "$leader_trait_brainslug_adm_desc$"
+ leader_trait_brainslug_rul:0 "$leader_trait_brainslug_adm$"
+ leader_trait_brainslug_rul_desc:0 "$leader_trait_brainslug_adm_desc$"
+ leader_trait_stranded_sci:0 "Floret - Stranded Scientist"
+ leader_trait_stranded_sci_desc:0 "This floret is a brilliant scientist who got stranded in space for several years before we rescued her. Her owner is constantly bragging about how smart she is and how cute she is when she's sleepy."
+ leader_trait_stranded_rul:0 "$leader_trait_stranded_sci$"
+ leader_trait_stranded_rul_desc:0 "$leader_trait_stranded_sci_desc$"
+ leader_trait_racket_gov:0 "Floret - Racket"
+ leader_trait_racket_gov_desc:0 "This floret is a Racket who voluntarily "
+ leader_trait_racket_rul:0 "$leader_trait_racket_gov$"
+ leader_trait_racket_rul_desc:0 "$leader_trait_racket_gov_desc$"
 
  # Ascension perks
  ap_benefic_acquisition:0 "Benefic Acquisition"
@@ -188,6 +225,14 @@
  d_hive_domestication_lab_desc:0 "This facility functions as the primary physical interface between the Hive Mind and its Owner. In addition to the Owner, a team of dedicated xeno-biologists, veterinarians, and floret caretakers live and work on-site to ensure that the mega-floret's needs are met."
  d_machine_domestication_lab:0 "AI Domestication Facility"
  d_machine_domestication_lab_desc:0 "This facility functions as the primary physical interface between the Hive Mind and its Owner. In addition to the Owner, a team of dedicated xeno-biologists, veterinarians, and floret caretakers live and work on-site to ensure that the mega-floret's needs are met."
+ d_domesticated_sentinels:0 "Domesticated Sentinels"
+ d_domesticated_sentinels_desc:0 "We care for the Sentinels and the land they once protected."
+ d_domesticated_nanites:0 "Domesticated Nanites"
+ d_domesticated_nanites_desc:0 "Cute, friendly nanobots need love and affection."
+ domesticated_nanite_swarm_modifier:0 "Domesticated Nanite Swarm"
+ domesticated_nanite_swarm_modifier_desc:0 "A self-evolved nanite swarm was domesticated on this planet and now helps the colonists with their day-to-day life."
+ d_domesticated_nemmas:0 "Domesticated Nemmas"
+ d_domesticated_nemmas_desc:0 "Nemma mega-florets carry our cities on their backs, with their emotional and physical needs provided by their owners."
 
  HUM_neck:0 "neck"
  HUM_neck_plural:0 "necks"
