--- a/mod/Domestication/localisation/english/domestication_events_l_english.yml
+++ b/mod/Domestication/localisation/english/domestication_events_l_english.yml
@@ -1,4 +1,4 @@
-﻿l_english:
+l_english:
  dialog_domesticator:0 "Domesticator"
  WONDERFUL:0 "Wonderful!"
  DOMESTICATE:0 "Domesticate"
@@ -51,7 +51,6 @@
 
  # Admiral
  domestication_leader.5.name:0 "Admiral Captures New Floret"
- domestication_leader.5.desc:0 "In a stunning display of military skill in the [system.GetName] system, Admiral §Y[new_owner.GetName]§!"
  domestication_leader.5.desc:0 "During the recent battle in [system.GetName], Admiral §Y[new_owner.GetName]§! personally subdued an enemy commander. The [new_floret.Species.GetAdj] admiral was recommended for mandatory domestication due to [new_floret.GetHerHis] history of violence, and our Admiral eagarly volunteered to take §Y[new_floret.GetName]§! as [new_owner.GetHerHis] new floret."
  domestication_leader.5.a:0 "[new_floret.GetSheHeCap]'ll be safe with the Admiral"
 
